# BerryBot

./: .gitignore  README.en.md  README.md
.kiro/specs/voice-assistant/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/voice-assistant/references/: MEMORY_TEMPLATE.md  SOUL_TEMPLATE.md
client/: .env.example  README.md  conftest.py  pyproject.toml  start.sh
client/src/client/: audio_backend.py  audio_player.py  audio_recorder.py  config.py  interrupt_handler.py  main.py  models.py  state_machine.py  test_audio_player.py  test_audio_recorder.py  test_interrupt_handler.py  test_main.py  test_state_machine.py  test_wake_prompt.py  test_wake_word.py  test_ws_client.py  wake_prompt.py  wake_word.py  wake_word_porcupine.py  wake_word_sherpa.py  ws_client.py
scripts/: compare_env_keys.py  generate_audio.py  mic_loopback.py
server/: .env.example  MEMORY.md  README.md  SOUL.md  models.json.example  pyproject.toml  start.sh
server/src/server/: ai_agent.py  config.py  main.py  memory_tools.py  model_manager.py  model_tools.py  models.py  session_tools.py  speech_recognizer.py  speech_synthesizer.py  test_ai_agent.py  test_main.py  test_memory_tools.py  test_model_manager.py  test_model_tools.py  test_session_tools.py  test_speech_recognizer.py  test_speech_synthesizer.py  test_ws_server.py  ws_server.py
