[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cotin_Yang", email = "Cotin_Yang@trendmicro.com" }
]
requires-python = ">=3.11"
dependencies = [
    "websockets",
    "certifi",
]

[project.optional-dependencies]
hardware = [
    "pyaudio",
]
porcupine = [
    "pvporcupine",
    "pyaudio",
]
sherpa = [
    "sherpa-onnx",
    "sherpa-onnx-core",
    "onnxruntime",
    "numpy",
    "click",
    "sentencepiece",
    "pypinyin",
    "pyaudio",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
